<resources>
    <string name="app_name">bjanash-c196</string>
    <string name="action_add_sample_data">Add Sample Data</string>
    <string name="title_activity_list_of_terms">list_of_terms</string>
    <string name="title_activity_list_of_courses">list_of_courses</string>
    <string name="title_activity_list_of_assessments">list_of_assessments</string>
    <string name="title_activity_detailed_term_view">detailed_term_view</string>
    <string name="title_activity_detailed_course_view">detailed_course_view</string>
    <string name="title_activity_detailed_assessment_view">detailed_assessment_view</string>
    <string name="see_list_of_terms">See List of Terms</string>
    <string name="see_list_of_courses">See List of Courses</string>
    <string name="see_list_of_assessments">See List of Assessments</string>
    <string name="SingleTerm">SingleTerm</string>
    <string name="termDetails">Details</string>
    <string name="title_activity_term_editor">term_editor</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="term_end">Term End</string>
    <string name="term_start">Term Start</string>
    <string name="term_title">Term Title</string>
    <string name="termtitle">TermTitle</string>
    <string name="termstart">TermStart</string>
    <string name="termend">TermEnd</string>
    <string name="list_of_courses">List of Courses</string>
    <string name="SingleCourse">SingleCourse</string>
    <string name="title_activity_course_editor">course_editor</string>
    <string name="course_title">Course Title</string>
    <string name="course_status">Course Status</string>
    <string name="email_address">Email Address</string>
    <string name="course_start">Course Start</string>
    <string name="course_end">Course End</string>
    <string name="list_of_notes">List of Notes</string>
    <string name="list_of_assessments">List of Assessments</string>
    <string name="singleassessment">SingleAssessment</string>
    <string name="single_note">Single Note</string>
    <string name="title_activity_assessment_editor">assessment_editor</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="due_date">Due Date</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="buttonGoBack">Button</string>
    <string name="go_back">Go Back</string>
    <string name="title_activity_note_editor">note_editor</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="title_activity_detailed_note_view">detailed_note_view</string>
    <string name="see_list_of_notes">See List of Notes</string>
    <string name="title_activity_list_of_notes_2">list_of_notes_2</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="delete">delete_term</string>
    <string name="delete_sample_data">Delete Sample Data</string>
    <string name="delete_course">delete_course</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="delete_note">delete_note</string>
    <string name="title_activity_homepage_activity">homepage_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_term">Edit Term</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="edit_note">Edit Note</string>
    <string name="assessment_status">Assessment Status</string>
</resources>
