<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".note_editor"
    tools:showIn="@layout/activity_note_editor">

    <EditText
        android:id="@+id/NoteTitle"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:autofillHints="Enter Note Title"
        android:inputType="text"
        android:text="@string/assessment_title"
        app:layout_constraintBottom_toTopOf="@+id/DueDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/DueDate"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:text="@string/due_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssessmentTitle"
        android:inputType="text"
        android:autofillHints="Enter Assessment Due Date"
        tools:ignore="LabelFor,TextFields"/>

    <EditText
        android:id="@+id/AssessmentType"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:text="@string/assessment_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DueDate"
        android:inputType="text"
        android:autofillHints="Enter Assessment Type"
        tools:ignore="LabelFor"/>

    <Button
        android:id="@+id/SAVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssessmentType" />

    <Button
        android:id="@+id/CANCEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SAVE"
        app:layout_constraintVertical_bias="0.275" />

</androidx.constraintlayout.widget.ConstraintLayout>