<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detailed_note_view"
    tools:showIn="@layout/activity_detailed_note_view">

    <TextView
        android:id="@+id/NoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_title"
        app:layout_constraintBottom_toTopOf="@+id/NoteContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NoteContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoteTitle" />

    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoteContent" />
</androidx.constraintlayout.widget.ConstraintLayout>